--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ __pycache__/
 # Distribution / packaging
 .Python
 build/
-devenv/
 develop-eggs/
 dist/
 downloads/
@@ -125,6 +124,7 @@ celerybeat.pid
 .venv
 env/
 venv/
+devenv/
 ENV/
 env.bak/
 venv.bak/
@@ -159,3 +159,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Test files
+mock-source-folder/
